[package]
name = "render-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "wrap_help", "env"] }
reqwest = { version = "0.12.8", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
